# myllm

./: .env.example  .gitignore  API_MANUAL.md  LICENSE  README.md  TESTING.md  USER_MANUAL.md  pyproject.toml  pytest.ini  test_api.py
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  embeddings.py  generate.py  models.py
app/core/: __init__.py  config.py  prompt.py  runtime.py  session.py  templates.py
app/engine/: __init__.py  llama_cpp.py  sanitizer.py  streaming.py  tokenizer.py
app/models/: __init__.py  catalog.py  config_generator.py  registry.py  schemas.py
app/services/: __init__.py  embeddings.py  inference.py  model_loader.py
app/storage/: __init__.py  cache.py  database.py
app/utils/: __init__.py  context.py  download.py  errors.py  hardware.py  logging.py
cli/: main.py
cli/commands/: __init__.py  pull.py  remove.py  run.py  serve.py
docs/: API.md  ARCHITECTURE.md  DESIGN_INSIGHTS.md  TESTING.md  TEST_RESULTS.md
myllm_chat_webui/: README.md  main.py  requirements.txt
myllm_chat_webui/static/: script.js  style.css
myllm_chat_webui/templates/: index.html
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_catalog.py  test_sanitizer.py  test_templates.py
